--- a/src/app/usersList/usersList.component.html
+++ b/src/app/usersList/usersList.component.html
@@ -1,3 +1,4 @@
 <section>
     You're logged in as a user!
+    <button id="logout-button" type="button" name="button" (click)="logout()">Log out</button>
 </section>
