--- a/src/app/userDashboard/userDashboard.component.html
+++ b/src/app/userDashboard/userDashboard.component.html
@@ -5,4 +5,5 @@
 <section class="dashboard-main">
     <confirm-delete *ngIf="showConfirmDelete"></confirm-delete>
     <user-list *ngIf="userList"></user-list>
+    <user-details *ngIf="userList"></user-details>
 </section>
