--- a/src/app/userDashboard/userComponents/userList/userList.component.html
+++ b/src/app/userDashboard/userComponents/userList/userList.component.html
@@ -1,6 +1,7 @@
 <section class="userList-main">
+    <h1>User List</h1>
     <div class="userList-users">
-        <div *ngFor="let user of pagedUsers">
+        <div *ngFor="let user of pagedUsers" (click)="selectUser(user.id)" class="userList-user">
             {{user.first_name}}
             {{user.last_name}}
             {{user.email}}
