cleaned up validation and reset password

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,25 +1,29 @@
 <section class="main">
-<div class="login">
-    <h2 class="login-title">Login 'n Stuff</h2>
-    <form class="login-form" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-        <div class="login-email" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
-            <input type="text" class="login-email-input" name="email" [(ngModel)]="model.email" #email="ngModel" required />
-            <label class="login-email-label" for="email">Email</label>
-            <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
-        </div>
-        <div class="login-password" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
-            <input type="password" class="login-password-input" name="password" [(ngModel)]="model.password" #password="ngModel" required />
-            <label class="login-password-label" for="password">Password</label>
-            <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
-        </div>
-        <div class="login-button">
-            <button [disabled]="loading" class="btn btn-primary">Login</button>
-        </div>
-    </form>
+    <div *ngIf="showValidationMessage">
+        Please check your email for a validation link!
+    </div>
+    <div class="login">
+        <h2 class="login-title">Login 'n Stuff</h2>
+        <form class="login-form" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+            <div class="login-email" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
+                <input type="text" class="login-email-input" name="email" [(ngModel)]="model.email" #email="ngModel" required />
+                <label class="login-email-label" for="email">Email</label>
+                <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
+            </div>
+            <div class="login-password" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+                <input type="password" class="login-password-input" name="password" [(ngModel)]="model.password" #password="ngModel" required />
+                <label class="login-password-label" for="password">Password</label>
+                <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
+            </div>
+            <div class="login-button">
+                <button [disabled]="loading" class="btn btn-primary">Login</button>
+            </div>
+        </form>
 
-</div>
+    </div>
 
     <div>
         <a routerLink='/register' routerLinkActive="active">Don't have an account? Register here!</a>
+        <a routerLink='/forgotPassword' routerLinkActive="active">Forgot your password?</a>
     </div>
 </section>
