users can add other users now

--- a/src/app/userDashboard/userDashboard.component.html
+++ b/src/app/userDashboard/userDashboard.component.html
@@ -1,9 +1,10 @@
 <header class="dashboard-header">
     <h1>Welcome Back<span  *ngIf="currentUserInfoLoaded">, {{currentUserInfo.first_name}}!</span></h1>
-    <button click=""></button>
+    <button (click)="showAddUserModal()">Add User</button>
     <button class="dashboard-logout-button" type="button" name="button" (click)="logout()">Log out</button>
 </header>
 <section class="dashboard-main">
+    <add-user *ngIf="showAddUser"></add-user>
     <confirm-delete *ngIf="showConfirmDelete"></confirm-delete>
     <user-list *ngIf="userList"></user-list>
     <user-details *ngIf="userList"></user-details>
