all functionality is working

--- a/src/app/passwordReset/resetPassword/resetPassword.component.html
+++ b/src/app/passwordReset/resetPassword/resetPassword.component.html
@@ -1,4 +1,5 @@
 <section *ngIf="userIsValidated">
+    <p>Please set your password</p>
     <form class="resetPassword-form" name="form" (ngSubmit)="f.form.valid && resetPassword()" #f="ngForm" novalidate>
         <div class="resetPassword-email" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
             <input type="password" class="resetPassword-password-input" name="password" [(ngModel)]="model.password" #password="ngModel" required />
@@ -11,7 +12,7 @@
             <div *ngIf="f.submitted && !password.valid" class="help-block">Verify Password is required</div>
         </div>
         <div class="resetPassword-button">
-            <button [disabled]="loading" class="btn btn-primary">Reset Password</button>
+            <button [disabled]="loading" class="btn btn-primary">Set Password</button>
         </div>
     </form>
 </section>
