--- a/src/app/userDashboard/userComponents/userList/userList.component.html
+++ b/src/app/userDashboard/userComponents/userList/userList.component.html
@@ -1,7 +1,7 @@
 <section class="userList-main">
     <h1>User List</h1>
     <div class="userList-users">
-        <div *ngFor="let user of pagedUsers" (click)="selectUser(user.id)" class="userList-user">
+        <div *ngFor="let user of pagedUsers" (click)="selectUser(user.id, user.first_name, user.last_name)" class="userList-user">
             <div class="userList-name"></div>{{user.first_name}}
             {{user.last_name}}
             {{user.email}}
