--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,34 +1,34 @@
 <section class="main">
+  <h1 class="main-title">Opus Assignment</h1>
   <div class="register">
-      <h2 class="register-title">Register 'n Stuff</h2>
+      <h2 class="register-title">Register</h2>
       <form class="register-form" name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
           <div class="form-input" [ngClass]="{ 'has-error': f.submitted && !firstName.valid }">
               <input class="field-input" type="text" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" required />
               <label class="field-label" for="firstName">First Name</label>
-              <div *ngIf="f.submitted && !firstName.valid" class="help-block">First Name is required</div>
+              <div *ngIf="f.submitted && !firstName.valid" class="form-firstName-error">First Name is required</div>
           </div>
           <div class="form-input" [ngClass]="{ 'has-error': f.submitted && !lastName.valid }">
               <input class="field-input" type="text" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" required />
               <label class="field-label" for="lastName">Last Name</label>
-              <div *ngIf="f.submitted && !lastName.valid" class="help-block">Last Name is required</div>
+              <div *ngIf="f.submitted && !lastName.valid" class="form-lastName-error">Last Name is required</div>
           </div>
           <div class="form-input" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
               <input class="field-input" type="text" name="email" [(ngModel)]="model.email" #email="ngModel" required />
               <label class="field-label" for="email">Email</label>
-              <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
+              <div *ngIf="f.submitted && !email.valid" class="form-email-error">Email is required</div>
           </div>
           <div class="form-input" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
-              <input class="field-input" type="password"name="password" min="8" [(ngModel)]="model.password" #password="ngModel" required />
+              <input class="field-input" type="password"name="password" minlength="8" [(ngModel)]="model.password" #password="ngModel" required />
               <label class="field-label" for="password">Password</label>
-              <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
+              <div *ngIf="f.submitted && !password.valid" class="form-password-error">Password of length 8 is required</div>
           </div>
-          <div class="register-button">
-              <button [disabled]="loading" class="btn btn-primary">Register</button>
+          <div>
+              <button [disabled]="loading" class="register-button">Register</button>
           </div>
       </form>
-  </div>
-
-  <div>
-      <a routerLink='/login' routerLinkActive="active">Already have an account? Login here!</a>
+      <div>
+        <a class="register-login-link" routerLink='/login' routerLinkActive="active">Already have an account? Login here!</a>
+      </div>
   </div>
 </section>
