--- a/src/app/passwordReset/forgotPassword/forgotPassword.component.html
+++ b/src/app/passwordReset/forgotPassword/forgotPassword.component.html
@@ -1,16 +1,18 @@
-<section>
-    <p>Looks like you forgot your password</p>
-    <p>Don't worry, it happens to the best of us!</p>
+<section class="main">
     <form class="forgotPassword-form" name="form" (ngSubmit)="f.form.valid && submitEmail()" #f="ngForm" novalidate>
-        <div class="forgotPassword-email" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
-            <input type="text" class="login-email-input" name="email" [(ngModel)]="model.email" #email="ngModel" required />
-            <label class="forgotPassword-email-label" for="email">Email</label>
-            <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
+        <div class="forgotPassword-title">
+            <h1>Looks like you forgot your password. It's alright.</h1>
+            <h1>Enter your email and we'll send you a link to reset your password.</h1>
         </div>
-        <div class="login-button">
-            <button [disabled]="loading" class="btn btn-primary">Submit Email</button>
+        <div class="forgotPassword-email" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
+            <input type="text" class="forgotPassword-email-input" name="email" [(ngModel)]="model.email" #email="ngModel" required />
+            <label class="forgotPassword-email-label" for="email">Email</label>
+            <div *ngIf="f.submitted && !email.valid" class="forgotPassword-email-error">Email is required</div>
+        </div>
+        <div>
+            <button [disabled]="loading" class="submit-button">Submit Email</button>
         </div>
     </form>
-    <div *ngIf="emailSent">An email was sent to {{model.email}}</div>
+    <div class="email-sent" *ngIf="emailSent">An email was sent to {{model.email}}</div>
 </section>
 
