--- a/src/app/passwordReset/resetPassword/resetPassword.component.html
+++ b/src/app/passwordReset/resetPassword/resetPassword.component.html
@@ -1,18 +1,20 @@
-<section *ngIf="userIsValidated">
-    <p>Please set your password</p>
-    <form class="resetPassword-form" name="form" (ngSubmit)="f.form.valid && resetPassword()" #f="ngForm" novalidate>
-        <div class="resetPassword-email" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
-            <input type="password" class="resetPassword-password-input" name="password" [(ngModel)]="model.password" #password="ngModel" required />
-            <label class="resetPassword-password-label" for="password">Password</label>
-            <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
-        </div>
-        <div class="resetPassword-password" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
-            <input type="password" class="resetPassword-password-input" name="password" [(ngModel)]="model.verifyPassword" #password="ngModel" required />
-            <label class="resetPassword-password-label" for="password">Verify Password</label>
-            <div *ngIf="f.submitted && !password.valid" class="help-block">Verify Password is required</div>
-        </div>
-        <div class="resetPassword-button">
-            <button [disabled]="loading" class="btn btn-primary">Set Password</button>
-        </div>
-    </form>
+<section *ngIf="userIsValidated" class="reset-main">
+    <div class="reset">
+        <h2 class="reset-title">Please set your password</h2>
+        <form class="reset-form" name="form" (ngSubmit)="f.form.valid && resetPassword()" #f="ngForm" novalidate>
+            <div class="reset-password" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+                <input type="password" class="reset-password-input" name="password" minlength="8" [(ngModel)]="model.password" #password="ngModel" required />
+                <label class="reset-password-label" for="password">Password</label>
+                <div *ngIf="f.submitted && !password.valid" class="reset-password-error">Password is required</div>
+            </div>
+            <div class="reset-verifyPassword" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+                <input type="password" class="reset-verifyPassword-input" name="password" minlength="8" [(ngModel)]="model.verifyPassword" #password="ngModel" required />
+                <label class="reset-verifyPassword-label" for="password">Verify Password</label>
+                <div *ngIf="f.submitted && !password.valid" class="reset-verifyPassword-error">Verify Password is required</div>
+            </div>
+            <div>
+                <button [disabled]="loading" class="reset-button">Set Password</button>
+            </div>
+        </form>
+    </div>
 </section>
