--- a/src/app/validation/validateEmail.component.html
+++ b/src/app/validation/validateEmail.component.html
@@ -1,5 +1,4 @@
-<section>
-  <h1>Awesome!</h1>
-
-  A validation email has been sent to {{email}}
+<section class="main">
+  <h1 class="main-title">Awesome!</h1>
+  <p class="main-subtitle">A validation email has been sent to {{email}}</p>
 </section>
