--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -5,7 +5,105 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url("../../images/landingBackground.jpg");
+    background: url("../../images/iceBackground.jpg");
     background-size: cover;
+}
 
+.main-title {
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.register {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40vw;
+  height: 50vh;
+  margin-top: 20px;
+}
+
+.register-title {
+  font-family: 'Merriweather Sans', sans-serif;
+  font-size: 30px;
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-input {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.field-input {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid black;
+  font-family: 'Merriweather Sans', sans-serif;
+  font-size: 20px;
+  outline: none;
+  width: 20vw;
+  height: 5vh;
+  background: transparent;
+  transition: background-color 0.5s;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+
+.field-input:focus {
+  background-color: #D8A2A1;
+  border-bottom: 2px solid black;
+}
+
+.field-input:valid {
+  background-color: #B0E5AF;
+}
+
+.form-firstName-error,
+.form-lastName-error,
+.form-email-error,
+.form-password-error {
+  font-family: 'Merriweather Sans', sans-serif;
+  margin-top: 5px;
+  font-size: 11px;
+}
+
+.field-label {
+  font-family: 'Merriweather Sans', sans-serif;
+}
+
+.register-button {
+  border: none;
+  outline: none;
+  font-family: 'Merriweather Sans', sans-serif;
+  font-size: 14px;
+  width: 8vw;
+  height: 5vh;
+  background: #D8A2A1;
+  border-radius: 2px;
+  margin: 20px;
+}
+
+.register-button {
+    background: #D67F7E;
+}
+
+.register-login-link {
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 11px;
+    text-decoration: none;
+    color: black;
+    margin-bottom: 8px;
+}
+
+.register-login-link:hover {
+    text-decoration: underline;
 }
