--- a/src/app/modals/deleteUser/confirmDelete.component.css
+++ b/src/app/modals/deleteUser/confirmDelete.component.css
@@ -1,8 +1,50 @@
+.confirmDelete-background {
+  width: 100vw;
+  height: 100vh;
+  background: black;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  z-index: 200;
+}
+
 .confirmDelete-main {
-  width: 20vw;
-  height: 20vh;
-  background: lightgray;
-  position: fixed;
-  top: 30vh;
-  left: 30vw;
+  position: relative;
+  top: 25vh;
+  z-index: 220;
+  background: mintcream;
+  width: 50vw;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 10px 10px 10px #3D4148;
+}
+
+.confirmDelete-text {
+  font-family: 'Merriweather Sans', sans-serif;
+  font-size: 20px;
+}
+
+.confirmDelete-delete-button,
+.confirmDelete-cancel-button {
+  border: none;
+  outline: none;
+  font-family: 'Merriweather Sans', sans-serif;
+  font-size: 14px;
+  width: 8vw;
+  height: 5vh;
+  background: #D8A2A1;
+  border-radius: 2px;
+  margin: 20px;
+}
+
+.confirmDelete-cancel-button:hover {
+  background: #D67F7E;
+}
+
+.confirmDelete-delete-button:hover {
+  background: #D67F7E;
 }
