--- a/src/app/userDashboard/userComponents/userDetails/userDetails.component.css
+++ b/src/app/userDashboard/userComponents/userDetails/userDetails.component.css
@@ -10,9 +10,21 @@
   border-radius: 0px 10px 10px 0px;
   box-shadow: 10px 10px 5px #888888;
   padding: 10px;
-  font-family: 'Roboto', sans-serif;
 }
 
-.userDetails-main h1 {
+.userDetails-title {
+    height: 23vh;
+    width: 40vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Merriweather Sans', sans-serif;
     font-size: 20px;
+}
+
+.userDetail-dates-section {
+  height: 56vh;
+  font-family: 'Merriweather Sans', sans-serif;
+  font-size: 15px;
+  overflow: scroll;
 }
