--- a/src/app/userDashboard/userComponents/userDetails/userDetails.component.html
+++ b/src/app/userDashboard/userComponents/userDetails/userDetails.component.html
@@ -1,6 +1,10 @@
 <section class="userDetails-main">
-  <h1>User Details <span *ngIf="selectedUserName">for {{selectedUserName.firstName}} {{selectedUserName.lastName}} </span></h1>
-  <div *ngIf="selectedUserId">
-    <div *ngFor="let date of loginDates()">{{date}}</div>
+  <div class="userDetails-title">
+    <h1>User Details <span *ngIf="selectedUserName">for {{selectedUserName.firstName}} {{selectedUserName.lastName}} </span></h1>
+  </div>
+  <div class="userDetail-dates-section">
+    <div *ngIf="selectedUserId">
+      <div class="userDetail-date" *ngFor="let date of loginDates()">{{date}}</div>
+    </div>
   </div>
 </section>
